# mr-pre-merge-validator

./: .env.example  .gitignore  README.md  mock_jira.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: smoke_test.sh
src/mr_validator/: config.py  logging.py
src/mr_validator/application/: validate_merge_request.py
src/mr_validator/clients/: gitlab_client.py  jira_client.py
src/mr_validator/domain/: models.py  validation.py
src/mr_validator/interfaces/: cli.py
src/mr_validator/services/: report_builder.py  retry.py  ticket_extractor.py
tests/: test_cli.py  test_config.py  test_gitlab_client.py  test_jira_client.py  test_project_bootstrap.py  test_report_builder.py  test_retry.py  test_ticket_extractor.py  test_validate_merge_request.py  test_validation.py
