[tool.poetry]
name = "mr-pre-merge-validator"
version = "0.1.0"
description = "GitLab merge request pre-merge validator with Jira integration"
authors = ["mihailbelousov <m.belousov.srb@gmail.com>"]
readme = "README.md"
packages = [{ include = "mr_validator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "^0.28.1"
pydantic-settings = "^2.14.1"
rich = "^15.0.0"
pydantic = "^2.13.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-mock = "^3.15.1"
pytest-httpx = "^0.36.2"
ruff = "^0.15.15"
mypy = "^2.1.0"
pytest-asyncio = "^1.4.0"

[tool.poetry.scripts]
mr-validator = "mr_validator.interfaces.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
